package bi.upg.stagetrack.enums;

/**
 * Énumération des rôles utilisateurs dans le système StageTrack
 */
public enum Role {
    ADMIN,      // Administrateur du système
    SUPERVISEUR, // Enseignant superviseur
    ETUDIANT    // Étudiant en stage
}