package bi.upg.stagetrack.enums;

/**
 * Types de pièces jointes pouvant être téléchargées dans le système
 */
public enum TypePiece {
    LETTRE_ACCEPTATION, // Lettre d'acceptation de stage de l'entreprise
    CV,                 // Curriculum Vitae de l'étudiant
    AUTRE               // Autre document justificatif
}